Fixed tree alignment for tall screens

--- a/PersonalWebsite/src/app/app.component.scss
+++ b/PersonalWebsite/src/app/app.component.scss
@@ -13,11 +13,14 @@ path {
 .tree {
   position: fixed;
   bottom: 0;
-  height: 90vh;
+  width: 90vw;
+  height: min(90vh, 90vw);
   display: flex;
   justify-content: center;
-  width: 100vw;
+  border: 1px;
+  border-color: black;
 }
+
 
 .background {
   height: 1000vh;
